--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
-    "sonner": "^2.0.5",
+    "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.62"
   },
