--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.5.2",
+    "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.62"
   },
